// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros client-side: client-side 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("index.test.ts")

      ↓ ↓ ↓ ↓ ↓ ↓

const x =
  "Hello server /Users/romex/useSSRComputation.macro/tests/index.test.ts";


`;

exports[`macros no usage: no usage 1`] = `

import { useSSRComputation } from "../lib/index.macro"

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros server-side: server-side 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("index.test.ts")

      ↓ ↓ ↓ ↓ ↓ ↓

const x =
  "Hello client /Users/romex/useSSRComputation.macro/tests/index.test.ts";


`;
